# EpistemXBackend_demo

./: .gitignore  Home.py  Modul_1.py  Modul_4.py  Modul_5.py  Modul_63and7.py  README.md  Selected_LC_Classification_Scheme.csv  environment.yml  gitignore  helper_module.py  home.py  pyproject.toml  repo_review.md  repository_structure_review.md  requirements.txt
.kiro/steering/: Visio_and_code_tags.md  product.md  structure.md  tech.md
.streamlit/: config.toml  secrets.toml  secrets_template.toml
Coding_and_testing_example/: Module_1_implementation.ipynb
auth/: ee-rg2icraf-ecab9c534f91.json
docs/: Authentication_Guide.md  Visio_and_code_tags.md  repo_structure.md
notebooks/: Implementation_example.ipynb  Modul_2-3_implementation.ipynb  Module_1_implementation.ipynb  Module_implementation.ipynb
pages/: 0_Earth_Engine_Authentication.py  1_Module_1_Generate_Image_Mosaic.py  2_Module_2_Classification_scheme.py  3_Module_3-4_Analyze_ROI.py  3_Module_3_Create_ROI.py  3_Module_3_Generate_ROI.py  3_Module_4_Analyze_ROI.py  4_Module_4_Analyze_ROI.py  4_Module_6_Classification and LULC Creation.py  5_Module_6_Classification_and_LULC_Creation.py  5_Module_7_Thematic_Accuracy.py  6_Module_7_Thematic_Accuracy.py
src/: module_helpers.py  src_modul_1.py  src_modul_2.py  src_modul_3.py  src_modul_3_part2.py  src_modul_4.py  src_modul_6.py  src_modul_7.py  src_utils_initializer.py  utils_shapefile_validation_conversion.py
src/epistemx/: __init__.py  accuracy.py  classification.py  data_acquisition.py  ee_config.py  helpers.py  input_utils.py  module_1.py  module_2.py  (+14 more)
